[package]
name = "testkit"
version = "0.1.0"
authors = ["keroro520 <keroroxx520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
lazy_static = "1.3.0"
